apps/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: homarr
    app.kubernetes.io/part-of: homarr
spec:
  type: ClusterIP
  clusterIP: 10.43.100.13
  ports:
    - port: 7575
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: homarr
